fix: newscard topic alignment

--- a/src/components/NewsCard/NewsCard.css
+++ b/src/components/NewsCard/NewsCard.css
@@ -90,7 +90,7 @@
   display: flex;
   height: 100%;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: space-between;
   padding: 0 24px 24px 24px;
 }
 
@@ -107,7 +107,7 @@
   line-height: 24px;
   letter-spacing: 0px;
   text-align: left;
-  margin: 20px 0 0 24px;
+  margin: 20px 0 12px 24px;
 }
 
 .newscard__title {
@@ -136,7 +136,7 @@
   font-size: 16px;
   font-weight: 700;
   line-height: 20px;
-  letter-spacing: 0.4000000059604645px;
+  letter-spacing: 0.4px;
   text-align: left;
   margin: 0;
 }
